force-app/main/default/objects/Transaction_Comment__c/Transaction_Comment__c.object-meta.xml
<CustomObject>
    <label>Transaction Comment</label>
    <nameField>
        <label>Transaction Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>