force-app/main/default/objects/Transaction_Comment__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This field is used to store the api name of the sobject field.</description>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>