force-app/main/default/objects/Transaction_Comment__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>This field is used to store the sobject api name.</description>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>