force-app/main/default/objects/Transaction_Comment__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>This field is used to store the actual sfdc record id which is used to get the details of the record from sobject.</description>
    <label>Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>